assets/css/nav.css
:root {
    --site-header-height: 60px;
}

.site-header {
    height: var(--site-header-height);

    & .wrapper {
        text-align: center;
    }
}

.site-logo {
    display: inline-block;

    & img {
        padding: calc(var(--site-header-height) * 0.1);
        height: calc(var(--site-header-height) * 0.8);
    }
}

.site-nav {
    position: inherit !important;
    border: inherit !important;
    line-height: var(--site-header-height);
}

.crumbs {
    & ol {
        margin-left: initial;
    }

    & li {
        display: inline;

        & span::after {
            content: "/";
            padding: 0 0.5em 0 0.5em;
        }
    }
}

